--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
       font-family: Arial, sans-serif;
       padding: 2rem;
       text-align: center;
-      background-color: #f5f5f5;
+      background-color: #f55;
     }
 
     h1 {
